Bug 20315: Make non-iso charsets work in frameset documents.  Fix 1/2: Propagate charset info through webshell reloads r=ftang a=chofmann